[workspace]
members = [
    "modules/entities",
    "modules/groups",
    "modules/map",
    "modules/players",
    "server"
]
resolver = "1"

[workspace.dependencies]
tokio = "1.37.0"
rusqlite = "0.31.0"

petgraph = "0.6.4"

serde = "1.0.199"
serde_json = "1.0.116"

uuid = "1.8.0"

sha2 = "0.10.8" # Hashs
rocket = "0.5.0"