[package]
name = "entities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde =      { workspace = true, features = ["derive"] }
uuid =       { workspace = true, features = ["serde", "v4"]  }
serde_json = { workspace = true }
groups =     { path = "../groups" }
map =        { path = "../map" }
clap = { version = "4.5.4", features = ["derive"] }